samples/invalid/05-dangling-edge.mmd
%% Diagram: Dangling edge

direction LR

a --> b
